--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-flag-icon": "^1.0.6",
+    "vue-i18n": "^8.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
