--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-flag-icon": "^1.0.6",
-    "vue-i18n": "^8.3.1"
+    "vue-i18n": "^8.3.1",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
